# yolov3_pytorch_ros

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: ros_ci.yml
config/: yolov3.cfg
launch/: detector.launch
models/: download_weights.sh  download_yolov3-tiny_weights.sh  download_yolov3_weights.sh
src/: detector.py
src/yolov3_pytorch_ros/: detector.py
src/yolov3_pytorch_ros/models/: dr_net.py  models.py  resnet_encoder.py
